--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,8 +1,8 @@
 body
 {
 	font-family: tahoma;
-	color: olive ;
-	background-color: darkblue;
+	color: lightblue ;
+	background-color: olive;
 	margin-left: 75px;
 	margin-right: 75px;
 }
