--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,68 +1,220 @@
 body
 {
-	font-family: Helvetica, sans-serif;
-	color: lightblue ;
+	font-family: monospace;
+	color: lightblue;
 	background-color: olive;
+	margin-top: 50px;
 	margin-left: 100px;
 	margin-right: 100px;
+	font-size: 20px;
+
 }
 
 header
 {
 	text-align: center;
+	padding: 5px;
 }
 
 h1
 {
-	font-family: Lucida Console;
+	
+	font-family: Cambria, Cochin, Georgia, serif;
 	text-align: center;
 	line-height: 0px;
 	
 }
 h2
 {
-	font-family: Courier New;
 	text-align: center;
-	line-height: 0px;
-}
-h3{
-	font-family: monospace;
-	text-align: center;
-	
-	
+	padding-top: 10px;
+	color: #524240;
+	font-size: 30px;
 	
 }
+
+h3
+{
+	text-align: center;
+	
+	padding: 25px;
+	padding-left: 0px;
+}
+
+h4
+{
+	text-align: center;
+	
+}
+h5
+{
+	color: #fff53d;
+	text-align: center;
+	font-weight: 300;
+	margin-top: -20px;
+}
+
 a
 {
-	
-	text-decoration: none;
-	color: #2c7055;
+	text-decoration: underline;
+	color: #4bd927;
 	font-weight: bold;
 }
 
 a:hover
 {
+	
 	text-decoration: underline;
-	color: aqua;
+	color: #deeb34;
 }
+
+
+
+nav
+{
+	text-align: center;
+	text-align: center;
+}
+
+.text-boxes
+{
+	text-align: center;
+	padding: 10px;
+	padding-left: 0px;
+	
+}
+input[type=text] {
+   
+    text-align: center;
+    
+}  
+
+.radios
+{
+	text-align: center;
+	background-color: #524240;  
+	padding: 25px;
+	padding-bottom: 25px;
+}
+
+
+.submit
+{
+	text-align: center;
+	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+.location
+{
+	text-align: center;
+	
+	padding: 25px;
+	padding-left: 0px;
+	
+}
+.caffeine
+{
+	
+	width: 15%;
+	margin: auto;
+	padding: 15px;
+	
+	
+}
+.label-for-boxes{
+	font-weight: bold;
+	text-align: center;
+}
+footer
+{
+	
+	text-align: center;
+}
+
+#button1
+{
+	background-color: #524240;
+	color: white;
+}
+
+thead
+{	
+	
+	background-color: lightyellow;
+}
+
+tfoot
+{
+	background-color:lightyellow;
+}
+
+th
+{
+	border: 1px solid black;
+	padding: .2em 1em .2em .5em;
+	text-align: left;
+	vertical-align: middle;
+	
+}
+
+
+td
+{
+	border: 1px solid black;
+	padding: .2em 1em .2em .5em;
+	text-align: left;
+	vertical-align: middle;
+}
+
+
+
+tbody tr:nth-child(odd) td
+{
+	background-color: maroon;
+}
+
+tbody tr:nth-child(even) td
+{
+	background-color: pink;
+}
+
+
 
 figure
 {
-	text-align: center;
+	text-align: left;
 }
 
 figcaption
 {
 	font-style: italic;
-}
-
-nav
-{
 	text-align: center;
 }
 
-footer
+
+.oddcolor
 {
-	text-align: center;
+	background-color: maroon;
 	
+}
+
+.evencolor
+{
+	
+	background-color: pink;
+}
+table{
+	
+	margin: auto;
+}
+
+.noUL
+{
+	text-decoration: none;
+}
+
+.noUL:hover
+{
+	text-decoration: none;
 }
